<resources>
    <string name="app_name">Krishi Samadhan</string>
    <string name="Title">कृषि समाधान</string>
    <string name="captureimage">तस्वीर खींचे</string>
    <string name="selectimage">तस्वीर चुनें</string>
    <string name="predict">जाँच शुरू करें</string>
    <string name="imageviewdesc">चुनी हुई फोटो यहां दिखाई देगी</string>
    <string name="results">परिणाम :</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="plant">plantgif</string>
    <string name="todo">todo</string>
    <string name="welcome">कृषि समाधान से जुड़ें</string>
    <string name="or">or</string>
    <string name="phone">फ़ोन नंबर</string>
    <string name="otp">OTP / ओटीपी </string>
    <string name="continue1">लॉग इन / साइन अप</string>
    <string name="skip">skip ></string>
    <string name="welcomelang">नमस्ते !</string>
    <string name="Hindi">हिंदी</string>
    <string name="hindides">जय जवान जय किसान</string>
    <string name="english">English</string>
    <string name="englishdes">Farming is profession of hope</string>
    <string name="languagebtn">भाषा चुनें</string>
    <string name="bengalititle">বাংলা</string>
    <string name="kannadtitle">ಕನ್ನಡ</string>
    <string name="kannadquote">ಜೈ ಜವಾನ್ ಜೈ ಕಿಸಾನ್</string>
    <string name="tamiltitle">தமிழ்</string>
    <string name="tamilquote">ஜெய் ஜவான் ஜெய் கிசான்</string>
    <string name="heal">अपनी फसल की जांच करें</string>
    <string name="bangalides">জয় হোক যুবক, জয় হোক কৃষক</string>
    <string name="checkuptext">क्या आपकी फसल ठीक है</string>
    <string name="sol">समाधान</string>
    <string name="imgtxt">जाँच से पहले फोटो अपलोड करें</string>
    <string name="logout">LogOut</string>
</resources>