<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/Title"
    android:textSize="30sp"
    android:textAlignment="center"
    android:layout_marginTop="50dp"
     />
    <ImageView
        android:id="@+id/imageObj"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/green_200"
        android:layout_below="@id/title"
        android:autofillHints="Image will appear here"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageviewdesc"
        />
    <Button
        android:id="@+id/gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageObj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/selectimage"
        />
    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/captureimage"
        />
    <Button
        android:id="@+id/predictbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/predict"
        />
    <Button
        android:id="@+id/aryan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/predictbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Home"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/results"
        android:layout_below="@id/aryan"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        />





</RelativeLayout>