<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnoseActivity">
  <TextView
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:text="@string/Title"
      android:textSize="25sp"
      android:textAlignment="textStart"
      android:layout_marginStart="20dp"
      android:layout_marginTop="40dp"
      android:textColor="@color/black"
      />

  <View
      android:id="@+id/hline"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/grey"
      android:layout_below="@+id/title"/>


  <FrameLayout
      android:id="@+id/Diagnose"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/hline"
      android:background="@drawable/border2"
      android:alpha="0.9">
    <TextView
        android:id="@+id/checkup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkuptext"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="70dp"
        android:textSize="30sp"
        android:background="@drawable/border"
        android:text="@string/selectimage"
        />

    <Button
        android:id="@+id/camera"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        android:text="@string/captureimage" />

  </FrameLayout>

  <ImageView
      android:id="@+id/imageObj"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:background="@drawable/border"
      android:layout_below="@id/Diagnose"
      android:autofillHints="Image will appear here"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:contentDescription="@string/imageviewdesc"
      />
  <Button
      android:id="@+id/predictbtn"
      android:layout_width="200dp"
      android:layout_height="60dp"
      android:layout_below="@id/imageObj"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/predict"
      android:background="@drawable/border"
      android:textSize="20sp"
      />
  <TextView
      android:id="@+id/result"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:text="@string/results"
      android:layout_below="@id/predictbtn"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textAlignment="center"
      android:layout_marginTop="50dp"
      />

<!--    <TextView-->
<!--      android:id="@+id/heal"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="40dp"-->
<!--      android:text="@string/heal"-->
<!--      android:textSize="22sp"-->
<!--      android:textAlignment="textStart"-->
<!--      android:layout_marginStart="20dp"-->
<!--      android:layout_marginTop="10dp"-->
<!--      android:textColor="@color/black"-->
<!--      />-->



  <Button
      android:id="@+id/aryan"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/result"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/sol"
      />



</RelativeLayout>