<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginotpActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="484dp"
        android:layout_height="265dp"
        android:background="@color/black"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/whitesapce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="230dp"
        android:background="@color/green_200"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whitesapce"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/otp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/continue2"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent=".8"
        app:passwordToggleEnabled="true" />

    <Button
        android:id="@+id/continue2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/whitesapce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>